--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   sync:
     name: Upstream Sync
-    runs-on: ubuntu-20.04
+    runs-on: nscloud
     steps:
       - uses: actions/checkout@v3
         with:
