--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -9,6 +9,7 @@ jobs:
   sync:
     name: Upstream Sync
     runs-on: nscloud
+    concurrency: sync_upstream
     steps:
       - uses: actions/checkout@v3
         with:
