Benchmark: avoid Dockerhub limits.

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -39,6 +39,10 @@ jobs:
 
       - uses: namespacelabs/nscloud-setup-buildx-action@v0
 
+      - name: Avoid Dockerhub pull limits
+        run: |
+          sed -i 's/https://registry-1.docker.io/169.254.169.43:6001/g' ./moby/contrib/download-frozen-image-v2.sh
+
       - uses: docker/build-push-action@v4
         with:
           context: ./moby
